--- a/css/style.css
+++ b/css/style.css
@@ -293,6 +293,10 @@ textarea {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-transition: -webkit-transform 0.4s ease-in-out;
+  transition: -webkit-transform 0.4s ease-in-out;
+  transition: transform 0.4s ease-in-out;
+  transition: transform 0.4s ease-in-out, -webkit-transform 0.4s ease-in-out;
 }
 @media (min-width: 71.25em) {
   .portfolio-link {
@@ -337,6 +341,12 @@ textarea {
   .portfolio-link {
     height: 20rem;
   }
+}
+
+.portfolio-link:hover {
+  -webkit-transform: scale(1.05);
+      -ms-transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 .portrait::after {
@@ -403,6 +413,12 @@ textarea {
   .landscape::after {
     font-size: 1.375rem;
   }
+}
+
+.portrait:hover::after,
+.landscape:hover::after,
+.conten:hover::after {
+  color: rgb(207, 200, 200);
 }
 
 .conten::after {
@@ -557,6 +573,18 @@ body {
     gap: 1.25rem;
   }
 }
+.header-container .nav-list .nav-link {
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+.header-container .nav-list .nav-link:hover {
+  color: rgb(207, 200, 200);
+}
+.header-container .nav-list .nav-link:hover {
+  color: rgb(207, 200, 200);
+}
 .header-container .social-media-block {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -688,7 +716,10 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 40px;
+  gap: 60px;
+}
+.burger-menu .nav-link {
+  font-size: 30px;
 }
 
 .burger-opened .burger-menu::after {
